[gd_scene load_steps=7 format=3 uid="uid://bti8fmdpm8cgl"]

[ext_resource type="Script" uid="uid://cuagnks6lfimo" path="res://scripts/Block.gd" id="1_xy3v5"]
[ext_resource type="LabelSettings" uid="uid://di7qwojobxj1y" path="res://sprites/Command.tres" id="2_pghf5"]
[ext_resource type="Texture2D" uid="uid://dwcjksqiy8sbm" path="res://sprites/arrow_up.svg" id="3_wtxr1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwmav"]
size = Vector2(102, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omwid"]
size = Vector2(19.4111, 18.3492)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wtxr1"]
size = Vector2(95, 22)

[node name="Block" type="Node2D"]
z_index = 1
script = ExtResource("1_xy3v5")

[node name="Texture" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="TextureUp" type="ColorRect" parent="Texture"]
layout_mode = 0
offset_right = 217.0
offset_bottom = 22.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="TextureDown" type="ColorRect" parent="Texture"]
layout_mode = 0
offset_top = 90.0
offset_right = 217.0
offset_bottom = 112.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="TextureLeft" type="ColorRect" parent="Texture"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 112.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionUp" type="CollisionShape2D" parent="Area2D"]
position = Vector2(71, 11)
shape = SubResource("RectangleShape2D_bwmav")

[node name="CollisionDown" type="CollisionShape2D" parent="Area2D"]
position = Vector2(109, 100.981)
scale = Vector2(11.16, 1.2)
shape = SubResource("RectangleShape2D_omwid")

[node name="CollisionLeft" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10, 56)
rotation = -3.14159
scale = Vector2(1.03034, -6.10681)
shape = SubResource("RectangleShape2D_omwid")

[node name="CollisionUpProperty" type="CollisionShape2D" parent="Area2D"]
position = Vector2(169.5, 11)
shape = SubResource("RectangleShape2D_wtxr1")

[node name="Label" type="Label" parent="."]
offset_left = 23.0
offset_top = -4.0
offset_right = 122.0
offset_bottom = 24.0
text = "Если"
label_settings = ExtResource("2_pghf5")
horizontal_alignment = 2

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(10, 12)
scale = Vector2(0.7, 0.7)

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Buttons"]
layout_mode = 0
offset_left = 122.0
offset_right = 217.0
offset_bottom = 22.0
mouse_filter = 2
color = Color(0.366595, 0.366595, 0.366595, 0.286275)

[node name="Up" type="Button" parent="Buttons"]
visible = false
z_index = 20
layout_mode = 0
offset_left = 162.0
offset_top = -15.0
offset_right = 970.0
offset_bottom = 793.0
scale = Vector2(0.01854, 0.01854)
icon = ExtResource("3_wtxr1")

[node name="Down" type="Button" parent="Buttons"]
visible = false
z_index = 20
layout_mode = 0
offset_left = 177.0
offset_top = 37.0
offset_right = 985.0
offset_bottom = 845.0
rotation = 3.14159
scale = Vector2(0.01854, 0.01854)
icon = ExtResource("3_wtxr1")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="pressed" from="Buttons/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Buttons/Down" to="." method="_on_down_pressed"]
